--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <!-- FabIcon -->
+    <link rel="icon" type="image/svg+xml" href="./src/assets/homeImage.jpg" />
     <!-- para diseño adaptable -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
